add filtering for restaurant, doc for restaurant
