# src/core/restaurant/restaurant.controller.ts
@@ -6,40 +6,64 @@ import {
   Patch,
   Param,
   Delete,
+  Query,
 } from '@nestjs/common';
 import { RestaurantService } from './restaurant.service';
 import { CreateRestaurantDto } from './dto/create-restaurant.dto';
 import { UpdateRestaurantDto } from './dto/update-restaurant.dto';
+import { PaginationQueryDto } from 'common/dtos/query.dto';
+import { RestaurantFilterDto } from './dto/get-restaurant.dto';
+import { ApiBearerAuth, ApiTags } from '@nestjs/swagger';
+import { ApiPaginatedResponse } from 'common/dtos/return-pagination.dto';
+import { Restaurant } from './entities/restaurant.entity';
+import { RestaurantReturnDto } from './dto/return-restaurant';
 
-@Controller('restaurant')
+@ApiTags('Restaurants')
+@ApiBearerAuth()
+@Controller('restaurants')
 export class RestaurantController {
   constructor(private readonly restaurantService: RestaurantService) {}
 
   @Post()
-  create(@Body() createRestaurantDto: CreateRestaurantDto) {
-    return this.restaurantService.create(createRestaurantDto);
+  async create(@Body() createRestaurantDto: CreateRestaurantDto) {
+    const restaurant = await this.restaurantService.create(createRestaurantDto);
+    return restaurant as RestaurantReturnDto;
   }
 
   @Get()
-  findAll() {
-    return this.restaurantService.findAll();
+  @ApiPaginatedResponse(Restaurant)
+  async findAll(
+    @Query() paginateQueryDto: PaginationQueryDto,
+    @Query() restaurantFilterDto: RestaurantFilterDto,
+  ) {
+    const result = await this.restaurantService.findAllPaginate(
+      paginateQueryDto,
+      restaurantFilterDto,
+    );
+
+    return result;
   }
 
   @Get(':id')
-  findOne(@Param('id') id: string) {
-    return this.restaurantService.findOne(+id);
+  async findOne(@Param('id') id: string) {
+    const restaurant = await this.restaurantService.findOne(id);
+    return restaurant as RestaurantReturnDto;
   }
 
   @Patch(':id')
-  update(
+  async update(
     @Param('id') id: string,
     @Body() updateRestaurantDto: UpdateRestaurantDto,
   ) {
-    return this.restaurantService.update(+id, updateRestaurantDto);
+    const restaurant = await this.restaurantService.update(
+      id,
+      updateRestaurantDto,
+    );
+    return restaurant as RestaurantReturnDto;
   }
 
   @Delete(':id')
-  remove(@Param('id') id: string) {
-    return this.restaurantService.remove(+id);
+  async remove(@Param('id') id: string) {
+    await this.restaurantService.remove(id);
   }
 }
